@@ -34,8 +34,6 @@ Must-Have (before 1.0)
 Should-Have
 -----------
 
-- ``current_route_url`` function.  https://gist.github.com/762842
-
 - Convert paster template and tutorial HTML templates to use
   ``request.static_url('{{package}}:static/foo.css')`` rather than
   ``${request.application_url}/static/foo.css``.
